--- a/Minigin/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin/Minigin.vcxproj
@@ -185,7 +185,7 @@
   <ItemGroup>
     <ClInclude Include="BaseComponent.h" />
     <ClInclude Include="Font.h" />
-    <ClInclude Include="FPSComp.h" />
+    <ClInclude Include="FPS.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Minigin.h" />
@@ -203,7 +203,7 @@
   <ItemGroup>
     <ClCompile Include="BaseComponent.cpp" />
     <ClCompile Include="Font.cpp" />
-    <ClCompile Include="FPSComp.cpp" />
+    <ClCompile Include="FPS.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
