--- a/Minigin/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin/Minigin.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClInclude Include="SceneManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SceneObject.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Minigin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -51,19 +48,22 @@
     <ClInclude Include="Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Texture2D.h">
-      <Filter>Compontents</Filter>
-    </ClInclude>
     <ClInclude Include="Font.h">
       <Filter>Compontents</Filter>
     </ClInclude>
     <ClInclude Include="InputManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TextObject.h">
+    <ClInclude Include="FPS.h">
       <Filter>Compontents</Filter>
     </ClInclude>
-    <ClInclude Include="FPS.h">
+    <ClInclude Include="Texture2D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureComp.h">
+      <Filter>Compontents</Filter>
+    </ClInclude>
+    <ClInclude Include="TextObject.h">
       <Filter>Compontents</Filter>
     </ClInclude>
   </ItemGroup>
@@ -98,19 +98,22 @@
     <ClCompile Include="Renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Texture2D.cpp">
-      <Filter>Compontents</Filter>
-    </ClCompile>
     <ClCompile Include="Font.cpp">
       <Filter>Compontents</Filter>
     </ClCompile>
     <ClCompile Include="InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TextObject.cpp">
+    <ClCompile Include="FPS.cpp">
       <Filter>Compontents</Filter>
     </ClCompile>
-    <ClCompile Include="FPS.cpp">
+    <ClCompile Include="Texture2D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureComp.cpp">
+      <Filter>Compontents</Filter>
+    </ClCompile>
+    <ClCompile Include="TextObject.cpp">
       <Filter>Compontents</Filter>
     </ClCompile>
   </ItemGroup>
