--- a/Minigin/imgui.ini
+++ b/Minigin/imgui.ini
@@ -4,7 +4,43 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=122,20
-Size=1049,680
+Pos=32,63
+Size=561,394
 Collapsed=0
+
+[Window][Exercise 1]
+Pos=-5,30
+Size=361,181
+Collapsed=0
+
+[Window][Exercise 2 and 3]
+Pos=361,25
+Size=361,308
+Collapsed=0
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
 
